--- a/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass/DiaryTableCell.xib
+++ b/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass/DiaryTableCell.xib
@@ -8,53 +8,76 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DiaryTableCell" id="j75-S3-5h7" customClass="DiaryTableCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DiaryTableCell" rowHeight="73" id="j75-S3-5h7" customClass="DiaryTableCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="73"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="j75-S3-5h7" id="AWC-2c-hiU">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="31.12.2015 23:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBM-6n-lkI">
-                        <rect key="frame" x="8" y="12" width="151" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="151" id="UtK-FE-v8E"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mmol/L" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zTB-Pb-k6G">
+                        <rect key="frame" x="117" y="42" width="111" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mmol/L" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zTB-Pb-k6G">
-                        <rect key="frame" x="255" y="11" width="59" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="59" id="tzI-Ao-RxC"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="postprandial" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFd-Hy-uB6">
+                        <rect key="frame" x="167" y="40" width="145" height="26"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="180/120" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MrB-m6-BaD">
-                        <rect key="frame" x="167" y="12" width="80" height="21"/>
+                        <rect key="frame" x="8" y="42" width="101" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="101" id="M9Y-Ta-PrO"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                        <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blutdruck" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cQf-3C-Ptf">
+                        <rect key="frame" x="8" y="7" width="134" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="134" id="271-Oe-4wS"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="31.12.2015 23:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBM-6n-lkI">
+                        <rect key="frame" x="178" y="7" width="151" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="tBM-6n-lkI" firstAttribute="baseline" secondItem="MrB-m6-BaD" secondAttribute="baseline" id="PS0-d9-yeH"/>
-                    <constraint firstItem="tBM-6n-lkI" firstAttribute="leading" secondItem="AWC-2c-hiU" secondAttribute="leadingMargin" id="Ram-yb-Hrd"/>
-                    <constraint firstItem="MrB-m6-BaD" firstAttribute="leading" secondItem="tBM-6n-lkI" secondAttribute="trailing" constant="8" symbolic="YES" id="gQG-vl-kji"/>
-                    <constraint firstItem="tBM-6n-lkI" firstAttribute="top" secondItem="AWC-2c-hiU" secondAttribute="topMargin" constant="4" id="k9y-lH-8DJ"/>
-                    <constraint firstItem="zTB-Pb-k6G" firstAttribute="centerY" secondItem="AWC-2c-hiU" secondAttribute="centerY" id="mIM-Cs-v2w"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="zTB-Pb-k6G" secondAttribute="trailing" constant="-2" id="s5u-oR-U6g"/>
-                    <constraint firstItem="zTB-Pb-k6G" firstAttribute="leading" secondItem="MrB-m6-BaD" secondAttribute="trailing" constant="8" symbolic="YES" id="tdV-pw-mDP"/>
+                    <constraint firstItem="TFd-Hy-uB6" firstAttribute="top" secondItem="tBM-6n-lkI" secondAttribute="bottom" constant="12" id="3Js-nK-0ok"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="TFd-Hy-uB6" secondAttribute="bottom" constant="-2" id="3MJ-he-8tu"/>
+                    <constraint firstItem="cQf-3C-Ptf" firstAttribute="top" secondItem="AWC-2c-hiU" secondAttribute="topMargin" constant="-1" id="8GW-6T-f58"/>
+                    <constraint firstItem="zTB-Pb-k6G" firstAttribute="top" secondItem="MrB-m6-BaD" secondAttribute="top" id="AIS-lk-pPa"/>
+                    <constraint firstItem="tBM-6n-lkI" firstAttribute="leading" secondItem="cQf-3C-Ptf" secondAttribute="trailing" constant="36" id="Ane-B4-bos"/>
+                    <constraint firstItem="tBM-6n-lkI" firstAttribute="bottom" secondItem="cQf-3C-Ptf" secondAttribute="bottom" id="K1m-m2-GXB"/>
+                    <constraint firstItem="TFd-Hy-uB6" firstAttribute="trailing" secondItem="AWC-2c-hiU" secondAttribute="trailingMargin" id="QmK-sQ-FrM"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="zTB-Pb-k6G" secondAttribute="trailing" constant="84" id="SXY-PF-Q6p"/>
+                    <constraint firstItem="MrB-m6-BaD" firstAttribute="leading" secondItem="AWC-2c-hiU" secondAttribute="leadingMargin" id="VnU-HS-4N1"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="tBM-6n-lkI" secondAttribute="trailing" constant="-17" id="Xfu-ch-Ikx"/>
+                    <constraint firstItem="cQf-3C-Ptf" firstAttribute="top" secondItem="tBM-6n-lkI" secondAttribute="top" id="Xrb-Lu-VtC"/>
+                    <constraint firstItem="MrB-m6-BaD" firstAttribute="top" secondItem="cQf-3C-Ptf" secondAttribute="bottom" constant="14" id="bPC-v4-ugG"/>
+                    <constraint firstItem="MrB-m6-BaD" firstAttribute="baseline" secondItem="zTB-Pb-k6G" secondAttribute="baseline" id="pE7-er-30Y"/>
+                    <constraint firstItem="zTB-Pb-k6G" firstAttribute="leading" secondItem="MrB-m6-BaD" secondAttribute="trailing" constant="8" symbolic="YES" id="rhH-Wg-zOJ"/>
+                    <constraint firstItem="TFd-Hy-uB6" firstAttribute="leading" secondItem="MrB-m6-BaD" secondAttribute="trailing" constant="58" id="rju-rx-0eh"/>
+                    <constraint firstItem="cQf-3C-Ptf" firstAttribute="leading" secondItem="MrB-m6-BaD" secondAttribute="leading" id="ruI-v6-9QB"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="MrB-m6-BaD" secondAttribute="bottom" constant="1" id="ym5-tf-4qz"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="beforeMealLabel" destination="TFd-Hy-uB6" id="mIM-4D-AYY"/>
                 <outlet property="dateLabel" destination="tBM-6n-lkI" id="gSD-9A-BY5"/>
+                <outlet property="titleLabel" destination="cQf-3C-Ptf" id="P2r-Z3-1iZ"/>
                 <outlet property="unitLabel" destination="zTB-Pb-k6G" id="68L-3I-wZx"/>
                 <outlet property="valueLabel" destination="MrB-m6-BaD" id="aYA-72-HUA"/>
             </connections>
-            <point key="canvasLocation" x="339" y="233"/>
+            <point key="canvasLocation" x="339" y="214.5"/>
         </tableViewCell>
     </objects>
 </document>
